--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -4,4 +4,4 @@
   yum:
     name: "{{ item }}"
     state: present
-  with_items: nginx_common_packages
+  with_items: "{{ nginx_common_packages }}"
