--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,8 @@
 nginx_common_packages:
   - http://nginx.org/packages/centos/7/x86_64/RPMS/nginx-1.8.1-1.el7.ngx.x86_64.rpm
 
+nginx_worker_processes: 2
+
 nginx_common_ssl_path: /etc/nginx/ssl
 nginx_common_ssl_dh_bits: 2048
 nginx_common_ssl_protocols: TLSv1 TLSv1.1 TLSv1.2
