Adds MIME type for source maps
This is required for @jobara's source maps related work in https://github.com/jobara/infusion/tree/FLUID-5832

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -24,6 +24,7 @@
   with_items:
     - "    font/ttf                              ttf;"
     - "    font/opentype                         otf;"
+    - "    application/json                      map;"
   notify:
     - restart nginx
 
