--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,16 @@
 ---
 
-nginx_common_packages:
-  - https://nginx.org/packages/centos/7/x86_64/RPMS/nginx-1.10.3-1.el7.ngx.x86_64.rpm
+# Nginx package version (will install latest if version is not specified)
+#nginx_common_version: 1.10.3
 
-nginx_worker_processes: 2
+# Nginx repository package
+nginx_common_repo_package: https://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm
+
+# Nginx repository signing key
+nginx_common_repo_key: https://nginx.org/packages/keys/nginx_signing.key
+
+# Number of worker processes (integer, 'auto' for one process per CPU)
+nginx_worker_processes: 'auto'
 
 nginx_common_ssl_enabled: no
 nginx_common_ssl_path: /etc/nginx/ssl
