--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,3 +6,9 @@ nginx_common_package: 'nginx{% if nginx_common_version is defined %}-{{ nginx_co
 # Additional packages that may be required
 nginx_common_additional_packages:
   - libsemanage-python
+
+# Nginx repository package
+nginx_common_repo_package: https://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm
+
+# Nginx repository signing key
+nginx_common_repo_key: https://nginx.org/packages/keys/nginx_signing.key
