--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,5 @@
 ---
-
 galaxy_info:
-  description: Ansible role that installs and configures Nginx
-  min_ansible_version: 1.2
+  description: Ansible role that installs and configures nginx
+  min_ansible_version: 2.3
 dependencies: []
-  
