--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -3,8 +3,8 @@
   hosts: all
   gather_facts: False
   tasks:
-    - name: Install python for Ansible
-      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+    - name: Install net-tools for tests
+      raw: test -e /usr/bin/netstat || (yum install -y net-tools)
       become: True
       changed_when: False
 
